# raylib-platformer

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
cmake/: sourcelist.cmake
docs/: ecs.md
src/: main.cpp
src/core/: component_array.h  component_manager.h  components.h  coordinator.h  entity.h  entity_manager.h  models.h  scene.h  system_manager.h
src/core/components/: camera.h  gravity.h  renderable.h  rigid_body.h  transform.h
src/core/systems/: physics_system.h  render_system.cpp  render_system.h
src/game/: game.cpp  game.h  mainscreen.cpp  mainscreen.h  player.cpp  player.h
